--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,38 +1,23 @@
+FROM node:18-alpine AS base
+
 # Install dependencies only when needed
-FROM node:18-alpine AS deps
+FROM base AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
-
-ARG SERVICE_PATH
-ARG PACKAGE_NAME
-ARG PNPM_VERSION
-
-# Install package manager
-# RUN --mount=type=cache,id=pnpm-store,target=/root/.pnpm-store \
-#   npm i --global --no-update-notifier --no-fund pnpm@7.17.0
-# Setup pnpm package manager
-RUN npm install -g pnpm@7.17.0
-
-
 # Install dependencies based on the preferred package manager
 COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
-# RUN \
-#   if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
-#   elif [ -f package-lock.json ]; then npm ci; \
-#   elif [ -f pnpm-lock.yaml ]; then yarn global add pnpm && pnpm i --frozen-lockfile; \
-#   else echo "Lockfile not found." && exit 1; \
-#   fi
+RUN \
+  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
+  elif [ -f package-lock.json ]; then npm ci; \
+  elif [ -f pnpm-lock.yaml ]; then yarn global add pnpm && pnpm i --no-frozen-lockfile; \
+  else echo "Lockfile not found." && exit 1; \
+  fi
 
-RUN pnpm i
 
 # Rebuild the source code only when needed
-FROM node:18-alpine AS builder
-
-# Add pnpm again
-RUN npm install -g pnpm@7.17.0
-
+FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
@@ -40,10 +25,7 @@ COPY . .
 # Next.js collects completely anonymous telemetry data about general usage.
 # Learn more here: https://nextjs.org/telemetry
 # Uncomment the following line in case you want to disable telemetry during the build.
-# ENV NEXT_TELEMETRY_DISABLED 1
-
-# RUN yarn build
-
+ENV NEXT_TELEMETRY_DISABLED 1
 
 ARG API_IMAGE_HOST
 ENV API_IMAGE_HOST=$API_IMAGE_HOST
@@ -53,13 +35,15 @@ ARG API_USERNAME
 ENV API_USERNAME=$API_USERNAME
 ARG API_PASSWORD
 ENV API_PASSWORD=$API_PASSWORD
-# RUN echo "Oh dang look at that $API_HOST"
+
+
+RUN yarn build
 
 # If using npm comment out above and use below instead
-RUN pnpm run build
+# RUN npm run build
 
 # Production image, copy all the files and run next
-FROM node:18-alpine AS runner
+FROM base AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
