--- a/apps/web/docker-compose.yml
+++ b/apps/web/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     container_name: codelibrary_web
     build:
-      context: .
+      # context: .
       dockerfile: Dockerfile
       args:
         API_IMAGE_HOST: ${API_IMAGE_HOST}
