--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,16 +9,16 @@
 		"lint": "next lint"
 	},
 	"devDependencies": {
-		"@codesandbox/sandpack-react": "^2.1.11",
+		"@codesandbox/sandpack-react": "^2.2.9",
 		"@codesandbox/sandpack-themes": "^2.0.21",
 		"@sindresorhus/slugify": "^2.2.0",
-		"@tailwindcss/line-clamp": "^0.4.2",
+		"@tailwindcss/line-clamp": "^0.4.4",
 		"@tailwindcss/typography": "^0.5.9",
-		"@types/dompurify": "^3.0.0",
+		"@types/dompurify": "^3.0.1",
 		"@types/mdast": "^3.0.11",
 		"@types/node": "^18.15.11",
 		"@types/ramda": "^0.28.23",
-		"@types/react": "^18.0.31",
+		"@types/react": "^18.0.33",
 		"@types/react-copy-to-clipboard": "^5.0.4",
 		"@types/react-dom": "^18.0.11",
 		"@types/react-syntax-highlighter": "^15.5.6",
@@ -30,6 +30,9 @@
 		"cmdk": "^0.2.0",
 		"cssnano": "^5.1.15",
 		"eslint": "^8.37.0",
+		"@typescript-eslint/eslint-plugin": "^5.56.0",
+		"@typescript-eslint/parser": "^5.56.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-config-next": "^13.2.4",
 		"framer-motion": "^10.10.0",
 		"html-react-parser": "^3.0.15",
@@ -38,7 +41,7 @@
 		"postcss": "^8.4.21",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-import": "^15.1.0",
-		"postcss-preset-env": "^8.2.0",
+		"postcss-preset-env": "^8.3.0",
 		"ramda": "^0.28.0",
 		"react": "^18.2.0",
 		"react-copy-to-clipboard": "^5.1.0",
@@ -58,13 +61,13 @@
 		"sanitize-html": "^2.10.0",
 		"sharp": "^0.31.3",
 		"shiki": "^0.14.1",
-		"tailwindcss": "^3.3.0",
-		"typescript": "^5.0.2",
+		"tailwindcss": "^3.3.1",
+		"typescript": "^5.0.3",
 		"unified": "^10.1.2",
-		"valtio": "^1.10.3"
+		"valtio": "^1.10.4"
 	},
 	"dependencies": {
 		"react-intersection-observer": "^9.4.3",
-		"swiper": "^9.1.1"
+		"swiper": "^9.2.0"
 	}
 }
